--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^5.14.15",
     "@mui/joy": "^5.0.0-beta.12",
     "@mui/material": "^5.14.15",
+    "@mui/styles": "^5.15.4",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
@@ -33,6 +34,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.5.0"
+    "vite": "^4.5.1"
   }
 }
