--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@mui/icons-material": "^5.14.15",
     "@mui/joy": "^5.0.0-beta.12",
     "@mui/material": "^5.14.15",
-    "@mui/styles": "^5.15.4",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
