--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
@@ -23,10 +23,10 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
-    "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.1.0"
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
