--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@mui/icons-material": "^5.14.15",
     "@mui/joy": "^5.0.0-beta.12",
     "@mui/material": "^5.14.15",
+    "bootstrap": "^5.3.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3"
   },
