--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -15,11 +17,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@headlessui/react": "^1.7.17",
+    "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.14.15",
     "@mui/joy": "^5.0.0-beta.12",
     "@mui/material": "^5.14.15",
+    "@testing-library/react": "^14.2.1",
     "bootstrap": "^5.3.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -36,6 +39,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.5.1"
+    "vite": "^4.5.1",
+    "vitest": "^1.3.1"
   }
 }
